CVE-2021-25740/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: attacker-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-entry
                port:
                  number: 80
